Fix broken CSS.

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -34,11 +34,6 @@ textarea {
     text-align: center;
 }
 
-.scheduled-game-header {
-    text-decoration: underline;
-    text-align: center;
-    font-weight:bo
-
 .scheduled-game {
     text-align: center;
 }
